--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@cloudbeds/webpack-module-federation-types-plugin",
+  "name": "@isawalhi/webpack-module-federation-types-plugin",
   "version": "1.18.0",
   "description": "Webpack module federation tools to share types among module-federated apps/components",
   "license": "MIT",
   "author": "Stepan Prybylynskyi <stepan.prybylynskyi@cloudbeds.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cloudbeds/webpack-module-federation-types-plugin.git"
+    "url": "https://github.com/isawalhi/webpack-module-federation-types-plugin"
   },
   "main": "dist/plugin.js",
   "files": [
